--- a/back/package.json
+++ b/back/package.json
@@ -29,6 +29,8 @@
     "@types/sqlite3": "^3.1.8",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.2",
+    "email-validator": "^2.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
