Feat: Add JWT passport fort check if user is already log

--- a/back/env.template
+++ b/back/env.template
@@ -1,3 +1,6 @@
 Need an API Key from here -> https://positionstack.com/quickstart
 
 API_KEY=""
+
+Generate a random key to use Jwt passport
+SECRET_JWT=""
