--- a/back/package.json
+++ b/back/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/sqlite3": "^3.1.8",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
@@ -42,7 +43,8 @@
     "rxjs": "^7.2.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11",
-    "typeorm": "^0.3.9"
+    "typeorm": "^0.3.9",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
