--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
     "axios": "^0.27.2",
     "cookie-cutter": "^0.2.0",
     "cookies-next": "^2.1.1",
