--- a/back/env.template
+++ b/back/env.template
@@ -1,2 +1,2 @@
-Need an API Key from here -> https://positionstack.com/quickstart
+#Need an API Key from here -> https://positionstack.com/quickstart
 API_KEY=""
