--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "back": "cd back && npm run build && npm run start",
     "front": "cd front && npm run build && npm run start",
-    "install": "concurrently \"cd back && npm install\" \"cd front && npm install\"",
+    "install_dep": "concurrently \"cd back && npm install\" \"cd front && npm install\"",
     "both": "concurrently \"npm run front\" \"npm run back\""
   },
   "dependencies": {
