--- a/front/env.template
+++ b/front/env.template
@@ -1,2 +1,2 @@
-#Ip of the hosted machine of the back
-BACK_HOST="e1r12p1"
+#Ip of the hosted machine of the back. Without "http://" and the port.
+BACK_HOST=""
