J'ai fait du Docker, moi ?

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "both": "concurrently \"npm run front\" \"npm run back\""
   },
   "dependencies": {
-    "concurrently": "^7.4.0"
+    "concurrently": "^7.4.0",
+    "yarn": "^1.22.19"
   }
 }
